Changes in doctor and api-gateway application.properties

--- a/Backend/patient-management/api-gateway/src/main/resources/application.properties
+++ b/Backend/patient-management/api-gateway/src/main/resources/application.properties
@@ -5,7 +5,8 @@ server.port=8085
 spring.application.name=api-gateway
 
 # Spring Config Server (optional import)
-spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.enabled=false
+# spring.config.import=optional:configserver:http://localhost:8888
 
 # Spring Cloud Gateway Routes
 spring.cloud.gateway.discovery.locator.enabled=true
@@ -31,8 +32,17 @@ spring.cloud.gateway.routes[3].predicates[0]=Path=/api/appointments/**
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
-eureka.instance.hostname=${HOSTNAME}.eureka
-
+eureka.instance.prefer-ip-address=false
+#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+eureka.instance.hostname=api-gateway-svc
 # Actuator Endpoint Config
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+# Debug Logging
+logging.level.root=INFO
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.reactor.netty=DEBUG
+logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping=DEBUG
+logging.level.org.springframework.cloud.gateway.filter.LoadBalancerClientFilter=TRACE
