--- a/Backend/patient-management/doctor-service/src/main/resources/application.properties
+++ b/Backend/patient-management/doctor-service/src/main/resources/application.properties
@@ -11,9 +11,17 @@ management.endpoint.health.show-details=always
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-
-eureka.instance.hostname=${HOSTNAME}
 eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
 
-eureka.instance.prefer-ip-address=true
-eureka.instance.instance-id=${spring.application.name}:${HOSTNAME}:${server.port}
+eureka.instance.prefer-ip-address=false
+eureka.instance.hostname=doctor-service-svc
+#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+# Debug Logging
+logging.level.root=INFO
+logging.level.com.spe.doctorservice=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.data=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
