--- a/K8s/microservices/api-gateway/service.yml
+++ b/K8s/microservices/api-gateway/service.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: api-gateway-app
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: api-gateway-app
   ports:
