--- a/K8s/microservices/doctor-service/deployment.yml
+++ b/K8s/microservices/doctor-service/deployment.yml
@@ -21,48 +21,50 @@ spec:
           ports:
             - containerPort: 8083
           env:
+            - name: HOSTNAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: SPRING_APPLICATION_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: doctor-service-config
+                  key: SPRING_APPLICATION_NAME
             - name: EUREKA_SERVER_ADDRESS
               valueFrom:
                 configMapKeyRef:
-                  name: common-config
+                  name: doctor-service-config
                   key: EUREKA_SERVER_ADDRESS
-
             - name: SPRING_DATASOURCE_URL
               valueFrom:
                 configMapKeyRef:
                   name: common-config
                   key: SPRING_DATASOURCE_URL
-
             - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
               valueFrom:
                 configMapKeyRef:
                   name: common-config
                   key: SPRING_DATASOURCE_DRIVER_CLASS_NAME
-
-            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
-              valueFrom:
-                configMapKeyRef:
-                  name: common-config
-                  key: SPRING_JPA_HIBERNATE_DDL_AUTO
-
-            - name: SPRING_JPA_SHOW_SQL
-              valueFrom:
-                configMapKeyRef:
-                  name: common-config
-                  key: SPRING_JPA_SHOW_SQL
-
-            - name: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
-              valueFrom:
-                configMapKeyRef:
-                  name: common-config
-                  key: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
-
             - name: SPRING_JPA_DATABASE_PLATFORM
               valueFrom:
                 configMapKeyRef:
                   name: common-config
                   key: SPRING_JPA_DATABASE_PLATFORM
-
+            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_JPA_HIBERNATE_DDL_AUTO
+            - name: SPRING_JPA_SHOW_SQL
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_JPA_SHOW_SQL
+            - name: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
             - name: SPRING_DATASOURCE_USERNAME
               valueFrom:
                 secretKeyRef:
@@ -75,8 +77,8 @@ spec:
                   key: password
           resources:
             requests:
-              memory: "128Mi"
-              cpu: "100m"
+              memory: "512Mi"
+              cpu: "250m"
             limits:
-              memory: "256Mi"
+              memory: "1Gi"
               cpu: "500m"
