--- a/K8s/microservices/doctor-service/service.yml
+++ b/K8s/microservices/doctor-service/service.yml
@@ -2,9 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: doctor-service-svc
+  labels:
+    app: doctor-service-app
 spec:
   selector:
     app: doctor-service-app
   ports:
     - port: 8083
       targetPort: 8083
+      protocol: TCP
+  type: ClusterIP
