--- a/K8s/microservices/api-gateway/deployment.yml
+++ b/K8s/microservices/api-gateway/deployment.yml
@@ -37,4 +37,16 @@ spec:
             limits:
               memory: "1Gi"
               cpu: "500m"
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8085   # Change to your service's port
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8085   # Change to your service's port
+            initialDelaySeconds: 10
+            periodSeconds: 5
 
