--- a/Backend/patient-management/appointment-service/src/main/resources/application.properties
+++ b/Backend/patient-management/appointment-service/src/main/resources/application.properties
@@ -15,5 +15,9 @@ eureka.client.fetch-registry=true
 eureka.instance.hostname=${HOSTNAME}
 eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
 
-eureka.instance.prefer-ip-address=true
+eureka.instance.prefer-ip-address=false
 eureka.instance.instance-id=${spring.application.name}:${HOSTNAME}:${server.port}
+
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
