--- a/Backend/patient-management/api-gateway/src/main/resources/application.properties
+++ b/Backend/patient-management/api-gateway/src/main/resources/application.properties
@@ -46,3 +46,6 @@ logging.level.org.springframework.web=DEBUG
 logging.level.reactor.netty=DEBUG
 logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping=DEBUG
 logging.level.org.springframework.cloud.gateway.filter.LoadBalancerClientFilter=TRACE
+
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus
