--- a/Backend/patient-management/appointment-service/src/main/resources/application.properties
+++ b/Backend/patient-management/appointment-service/src/main/resources/application.properties
@@ -21,3 +21,8 @@ eureka.instance.instance-id=${spring.application.name}:${HOSTNAME}:${server.port
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+
+
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus
