--- a/Backend/patient-management/auth-service/src/main/resources/application.properties
+++ b/Backend/patient-management/auth-service/src/main/resources/application.properties
@@ -17,3 +17,6 @@ eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
 
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${HOSTNAME}:${server.port}
+
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus
