--- a/Backend/patient-management/doctor-service/src/main/resources/application.properties
+++ b/Backend/patient-management/doctor-service/src/main/resources/application.properties
@@ -25,3 +25,6 @@ logging.level.org.springframework.data=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus
