--- a/Backend/patient-management/patient-service/src/main/resources/application.properties
+++ b/Backend/patient-management/patient-service/src/main/resources/application.properties
@@ -14,8 +14,6 @@ management.endpoint.health.show-details=always
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-eureka.instance.hostname=${HOSTNAME}
-eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
 
-eureka.instance.prefer-ip-address=true
-eureka.instance.instance-id=${spring.application.name}:${HOSTNAME}:${server.port}
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus
