--- a/Backend/patient-management/service-registry/src/main/resources/application.properties
+++ b/Backend/patient-management/service-registry/src/main/resources/application.properties
@@ -24,3 +24,6 @@ eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
 # Spring Boot Actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus
