--- a/K8s/storage/pv-pvc.yml
+++ b/K8s/storage/pv-pvc.yml
@@ -14,7 +14,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pvc-new
+  name: mysql-pvc-new-1
 spec:
   accessModes:
     - ReadWriteOnce
