--- a/Backend/patient-management/doctor-service/src/main/resources/application.properties
+++ b/Backend/patient-management/doctor-service/src/main/resources/application.properties
@@ -11,20 +11,20 @@ management.endpoint.health.show-details=always
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
+# eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
 
-eureka.instance.prefer-ip-address=false
-eureka.instance.hostname=doctor-service-svc
+# eureka.instance.prefer-ip-address=false
+# eureka.instance.hostname=doctor-service-svc
 #eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
-# Debug Logging
-logging.level.root=INFO
-logging.level.com.spe.doctorservice=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.data=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# # Debug Logging
+# logging.level.root=INFO
+# logging.level.com.spe.doctorservice=DEBUG
+# logging.level.org.springframework.web=DEBUG
+# logging.level.org.springframework.data=DEBUG
+# logging.level.org.springframework.security=DEBUG
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=prometheus
