--- a/K8s/microservices/doctor-service/deployment.yml
+++ b/K8s/microservices/doctor-service/deployment.yml
@@ -77,20 +77,20 @@ spec:
                   key: password
           resources:
             requests:
-              memory: "512Mi"
+              memory: "768Mi"
               cpu: "250m"
             limits:
-              memory: "1Gi"
+              memory: "1.5Gi"
               cpu: "500m"
-          livenessProbe:
-            httpGet:
-              path: /actuator/health
-              port: 8083   # Change to your service's port
-            initialDelaySeconds: 30
-            periodSeconds: 10
-          readinessProbe:
-            httpGet:
-              path: /actuator/health
-              port: 8083  # Change to your service's port
-            initialDelaySeconds: 10
-            periodSeconds: 5
+          # livenessProbe:
+          #   httpGet:
+          #     path: /actuator/health/liveness
+          #     port: 8083   # Change to your service's port
+          #   initialDelaySeconds: 60
+          #   periodSeconds: 10
+          # readinessProbe:
+          #   httpGet:
+          #     path: /actuator/health/readiness
+          #     port: 8083  # Change to your service's port
+          #   initialDelaySeconds: 10
+          #   periodSeconds: 5
