--- a/K8s/microservices/appointment-service/deployment.yml
+++ b/K8s/microservices/appointment-service/deployment.yml
@@ -81,18 +81,18 @@ spec:
             limits:
               memory: "1Gi"
               cpu: "500m"
-          livenessProbe:
-            httpGet:
-              path: /actuator/health
-              port: 8084
-            initialDelaySeconds: 30
-            periodSeconds: 10
-            failureThreshold: 3
-          readinessProbe:
-            httpGet:
-              path: /actuator/health
-              port: 8084
-            initialDelaySeconds: 15
-            periodSeconds: 5
-            failureThreshold: 2
+          # livenessProbe:
+          #   httpGet:
+          #     path: /actuator/health
+          #     port: 8084
+          #   initialDelaySeconds: 30
+          #   periodSeconds: 10
+          #   failureThreshold: 3
+          # readinessProbe:
+          #   httpGet:
+          #     path: /actuator/health
+          #     port: 8084
+          #   initialDelaySeconds: 15
+          #   periodSeconds: 5
+          #   failureThreshold: 2
             
