--- a/K8s/microservices/auth-service/service.yml
+++ b/K8s/microservices/auth-service/service.yml
@@ -6,5 +6,7 @@ spec:
   selector:
     app: auth-service-app
   ports:
-    - port: 8081
+    - port: 80
       targetPort: 8081
+      protocol: TCP
+  type: ClusterIP
