--- a/K8s/services/mysql/deployment.yml
+++ b/K8s/services/mysql/deployment.yml
@@ -32,6 +32,6 @@ spec:
       volumes:
         - name: mysql-storage
           persistentVolumeClaim:
-            claimName: mysql-pvc-new-1
+            claimName: mysql-pvc-new
        
       
