--- a/Backend/patient-management/appointment-service/src/main/resources/application.properties
+++ b/Backend/patient-management/appointment-service/src/main/resources/application.properties
@@ -26,3 +26,6 @@ management.endpoint.health.show-details=always
 
 management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=prometheus
+
+
+feign.circuitbreaker.enabled=true
