--- a/Backend/patient-management/doctor-service/src/main/resources/application.properties
+++ b/Backend/patient-management/doctor-service/src/main/resources/application.properties
@@ -28,3 +28,5 @@ eureka.client.fetch-registry=true
 
 management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=prometheus
+
+feign.circuitbreaker.enabled=true
