--- a/Backend/patient-management/patient-service/src/main/resources/application.properties
+++ b/Backend/patient-management/patient-service/src/main/resources/application.properties
@@ -17,3 +17,5 @@ eureka.client.fetch-registry=true
 
 management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=prometheus
+
+feign.circuitbreaker.enabled=true
