solved eureka issue

--- a/Backend/patient-management/patient-service/src/main/resources/application.properties
+++ b/Backend/patient-management/patient-service/src/main/resources/application.properties
@@ -13,7 +13,10 @@ management.endpoint.health.show-details=always
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
 
+eureka.instance.prefer-ip-address=false
+eureka.instance.hostname=patient-service-svc
 
 management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=prometheus
