--- a/Backend/patient-management/doctor-service/src/main/resources/application.properties
+++ b/Backend/patient-management/doctor-service/src/main/resources/application.properties
@@ -5,16 +5,15 @@ server.port=8083
 spring.application.name=doctor-service
 #spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.fail-fast=true
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always 
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-# eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
+eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
 
-# eureka.instance.prefer-ip-address=false
-# eureka.instance.hostname=doctor-service-svc
+eureka.instance.prefer-ip-address=false
+eureka.instance.hostname=doctor-service-svc
 #eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 # # Debug Logging
