--- a/K8s/microservices/appointment-service/service.yml
+++ b/K8s/microservices/appointment-service/service.yml
@@ -4,7 +4,7 @@ metadata:
   name: appointment-service-svc
 spec:
   selector:
-    app: appointment-service
+    app: appointment-service-app
   ports:
     - port: 80
       targetPort: 8084
