--- a/K8s/microservices/doctor-service/service.yml
+++ b/K8s/microservices/doctor-service/service.yml
@@ -4,7 +4,7 @@ metadata:
   name: doctor-service-svc
 spec:
   selector:
-    app: doctor-service
+    app: doctor-service-app
   ports:
     - port: 80
       targetPort: 8083
