--- a/K8s/microservices/patient-service/service.yml
+++ b/K8s/microservices/patient-service/service.yml
@@ -4,7 +4,7 @@ metadata:
   name: patient-service-svc
 spec:
   selector:
-    app: patient-service
+    app: patient-service-app
   ports:
     - port: 80
       targetPort: 8082
